--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "css-loader": "^6.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hooks": "^1.0.1",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "react-use": "^17.4.2",
