--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hooks": "^1.0.1",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "react-use": "^17.4.2",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/react-scroll": "^1.8.10"
   }
 }
