scroll to top added

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.45",
+    "@types/react-animate-on-scroll": "^2.1.8",
     "@types/react-dom": "^18.2.18",
     "atoms": "^0.2.0",
     "css-loader": "^6.8.1",
@@ -18,6 +19,7 @@
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-scroll-to-top": "^3.0.0",
     "react-use": "^17.4.2",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
