--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scroll": "^1.9.0",
     "react-scroll-to-top": "^3.0.0",
     "react-use": "^17.4.2",
+    "reactflow": "^11.10.1",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
