--- a/package.json
+++ b/package.json
@@ -12,18 +12,21 @@
     "@types/react-animate-on-scroll": "^2.1.8",
     "@types/react-dom": "^18.2.18",
     "atoms": "^0.2.0",
+    "axios": "^1.6.3",
     "css-loader": "^6.8.1",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hooks": "^1.0.1",
     "react-intersection-observer": "^9.5.3",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-scroll-to-top": "^3.0.0",
     "react-use": "^17.4.2",
     "reactflow": "^11.10.1",
+    "redux": "^5.0.1",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
