--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-scroll-parallax": "^3.4.5",
     "react-scroll-to-top": "^3.0.0",
     "react-use": "^17.4.2",
     "reactflow": "^11.10.1",
