--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "react-scroll": "^1.9.0",
     "react-scroll-parallax": "^3.4.5",
     "react-scroll-to-top": "^3.0.0",
+    "react-slick": "^0.29.0",
     "react-transition-group": "^4.4.5",
     "react-use": "^17.4.2",
     "reactflow": "^11.10.1",
     "redux": "^5.0.1",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
+    "slick-carousel": "^1.8.1",
     "style-loader": "^3.3.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
