react recharts added

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-transition-group": "^4.4.5",
     "react-use": "^17.4.2",
     "reactflow": "^11.10.1",
+    "recharts": "^2.12.3",
     "redux": "^5.0.1",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
