--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material/web": "^1.4.0",
+    "@materialstyle/materialstyle": "^3.1.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,8 +15,6 @@
     "@types/react-dom": "^18.2.18",
     "atoms": "^0.2.0",
     "axios": "^1.6.3",
-    "css-loader": "^6.8.1",
-    "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hooks": "^1.0.1",
@@ -35,6 +35,7 @@
     "sass-loader": "^13.3.2",
     "slick-carousel": "^1.8.1",
     "style-loader": "^3.3.3",
+    "swiper": "^11.1.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
