--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material/web": "^1.4.0",
+    "@material/mwc-textfield": "^0.27.0",
+    "@material/web": "^1.4.1",
     "@materialstyle/materialstyle": "^3.1.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -32,6 +34,7 @@
     "reactflow": "^11.10.1",
     "recharts": "^2.12.3",
     "redux": "^5.0.1",
+    "rollup": "^2.79.1",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "slick-carousel": "^1.8.1",
