Static Ui card completed

--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@types/react-dom": "^18.2.18",
     "atoms": "^0.2.0",
     "axios": "^1.6.3",
+    "console-browserify": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
     "react-hooks": "^1.0.1",
     "react-intersection-observer": "^9.5.3",
     "react-redux": "^9.0.4",
@@ -69,6 +71,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@hookform/devtools": "^4.3.1",
     "@types/react-scroll": "^1.8.10",
     "@types/react-transition-group": "^4.4.10"
   }
